# hello-websockets

./: main.py  pyproject.toml
templates/: chat.html
