[tool.poetry]
name = "hello-websockets"
version = "0.1.0"
description = "a hello world for websockets built on flask"
authors = ["Kyle Cole <>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
